--- a/style.css
+++ b/style.css
@@ -56,7 +56,6 @@ table {
 
 
 .left-section {
-    margin-left: 155px;
     margin-top: 158px;
 }
 
@@ -92,7 +91,7 @@ table {
 
 .content_area {
     display: flex;
-    max-width: 1130px;
+    max-width: 1140px;
     margin: 0 auto;
 }
 
@@ -107,6 +106,11 @@ label {
     background: #F0F4F7;
     border: none;
     margin-top: 20px;
+    cursor: pointer;
+}
+
+.input:hover {
+    background-color: #e2eaf0;
 }
 
 .input::placeholder {
@@ -133,6 +137,11 @@ label {
     width: 45px;
     height: 45px;
     border-radius: 22px;
+    cursor: pointer;
+}
+
+.circleIcon:hover {
+    border: 2px solid #6bca3e;
 }
 
 input[type="email"] {
@@ -173,6 +182,8 @@ input[type="email"] {
     width: 24px;
     margin-left: 18px;
     background: #F0F4F7;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .icons {
@@ -275,12 +286,17 @@ input[type="email"] {
 }
 
 .ftr_center {
-    max-width: 1170px;
+    max-width: 1140px;
     margin: 0 auto;
     display: flex;
     margin-top: 100px;
-    height: 450px;
     font-family: 'Roboto', sans-serif;
+    padding-bottom: 55px;
+}
+
+.ftr_center ul{
+    padding-left: 21px;
+    padding-top: 64px;
 }
 
 .ftr_title {
@@ -289,7 +305,6 @@ input[type="email"] {
 
 .footer {
     background: #313335;
-    width: 1440px;
 }
 
 .footer ul li a {
@@ -311,6 +326,22 @@ input[type="email"] {
 
 .item {
     width: 505px;
+}
+
+.hr {
+    border: none;
+    height: 1px;
+    background-color: #f0f4f7;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.footer-discleimer {
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    color: #6e7680;
+    font-size: 11px;
+    padding-bottom: 10px;
 }
 
 @media (max-width: 320px) {
@@ -341,9 +372,9 @@ input[type="email"] {
         font-size: 48px;
     }
 
-    .left-section {
-        margin-left: 100px;
-    }
+    /*.left-section {*/
+        /*margin-left: 100px;*/
+    /*}*/
 
     .title_main {
         padding-left: 70px;
