--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ table {
     --grey3: #A8B3C2;
     --grey4: #6e7680;
     --pink: #902156;
+    --gilroy: GilroyBold, serif;
+    --roboto: Roboto, sans-serif;
 }
 
 
@@ -77,7 +79,7 @@ table {
 .title_main {
     display: flex;
     font-size: 48px;
-    font-family: "GilroyBold", serif;
+    font-family: var(--gilroy);
 }
 
     .title_main img {
@@ -101,6 +103,7 @@ table {
 
 .content_area {
     display: flex;
+    justify-content: space-between;
     max-width: 1140px;
     margin: 0 auto;
 }
@@ -124,7 +127,7 @@ label {
 }
 
 .input::placeholder {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--roboto);
     font-style: normal;
     font-weight: normal;
     line-height: normal;
@@ -175,14 +178,14 @@ label {
 input[type="email"] {
     padding: 0 0 5px 31px;
     letter-spacing: 0.5px;
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--roboto);
 }
 
 .left-section , .right-section {
     max-width: 455px;
 }
 .left-section p {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--roboto);
     font-style: normal;
     font-weight: normal;
     line-height: 24px;
@@ -265,13 +268,13 @@ input[type="email"] {
 .description_item {
     padding-top: 20px;
     display: flex;
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--roboto);
     font-size: 14px;
 }
 
 .description {
     margin-top: 17px;
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--roboto);
 }
 
 .chose_section {
@@ -306,7 +309,7 @@ input[type="email"] {
         text-decoration: none;
         color: #313335;
         font-weight: bold;
-        font-family: GilroyBold, serif;
+        font-family: var(--gilroy);
         text-transform: uppercase;
         font-size: 10px;
     }
@@ -317,7 +320,7 @@ input[type="email"] {
 
 .ftr_title {
     color: var(--grey2);
-    font-family: Gilroy, serif;
+    font-family: var(--gilroy);
     line-height: normal;
     font-size: 14px;
     padding-right: 100px;
@@ -326,7 +329,7 @@ input[type="email"] {
 }
 
 .ftr_item {
-    font-family: Roboto, serif;
+    font-family: var(--roboto);
     font-style: normal;
     font-weight: normal;
     line-height: normal;
@@ -340,17 +343,21 @@ input[type="email"] {
     margin: 0 auto;
     display: flex;
     margin-top: 100px;
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--roboto);
     padding-bottom: 55px;
 }
 
 .ftr_center ul{
-    padding-left: 21px;
+    /*padding-right: 21px;*/
     padding-top: 64px;
 }
 
+.ftr_center ul:last-of-type {
+    flex-shrink: 7;
+}
+
 .ftr_title {
-    font-family: GilroyBold, serif;
+    font-family: var(--gilroy);
 }
 
 .footer {
@@ -366,10 +373,10 @@ input[type="email"] {
     text-align: center;
     padding: 15px 20px 15px 20px;
     border-radius: 21px;
-    width: 470px;
+    width: 450px;
     color: var(--white);
     cursor: pointer;
-    font-family: GilroyBold, serif;
+    font-family: var(--gilroy);
     font-size: 14px;
     border: none;
 }
@@ -388,7 +395,7 @@ input[type="email"] {
 
 .footer-discleimer {
     text-align: center;
-    font-family: "Roboto", sans-serif;
+    font-family: var(--roboto);
     color: var(--grey4);
     font-size: 11px;
     padding-bottom: 10px;
