--- a/style.css
+++ b/style.css
@@ -196,10 +196,6 @@ input[type="email"] {
     margin-bottom: 50px;
 }
 
-    .section_framework .item {
-        padding-left: 25px;
-    }
-
 .right-section {
     margin-left: 136px;
     margin-top: 118px;
@@ -212,7 +208,7 @@ input[type="email"] {
     border-radius: 50%;
     width: 24px;
     height: 24px;
-    margin-left: 18px;
+    margin-right: 18px;
     background: var(--grey);
     display: flex;
     justify-content: space-evenly;
@@ -249,10 +245,9 @@ input[type="email"] {
 
 .item .title {
     font-family: GilroyBold, serif;
-    font-size: 11px;
+    font-size: 12px;
     letter-spacing: 0.1em;
     color: var(--pink);
-    font-size: 10px;
     letter-spacing: 0.1em;
 }
 
@@ -270,6 +265,7 @@ input[type="email"] {
     display: flex;
     font-family: var(--roboto);
     font-size: 14px;
+    color: var(--grey4);
 }
 
 .description {
@@ -278,15 +274,9 @@ input[type="email"] {
 }
 
 .chose_section {
-    margin-left: 80px;
+    margin-left: 99px;
+    margin-top: 7px;
 }
-
-/*.icon {*/
-    /*border-radius: 30px;*/
-    /*width: 10px;*/
-    /*padding: 0px 6px 2px 6px;*/
-    /*background: #F0F4F7;*/
-/*}*/
 
 .chose_section:after {
     content: '\2807';
@@ -295,14 +285,16 @@ input[type="email"] {
 }
 
 .link {
+    display: flex;
     background-color: var(--white);
     border: 2px solid var(--grey2);
     border-radius: 21px;
     width: 76px;
+    height: 28px;
     padding: 6px 15px 6px 15px;
     text-align: center;
-    margin-top: 26px;
-    margin-left: 14px;
+    margin-top: 30px;
+    margin-left: 30px;
 }
 
     .link a {
@@ -312,6 +304,7 @@ input[type="email"] {
         font-family: var(--gilroy);
         text-transform: uppercase;
         font-size: 10px;
+        margin: auto;
     }
 
 .link:hover {
@@ -353,7 +346,7 @@ input[type="email"] {
 }
 
 .ftr_center ul:last-of-type {
-    flex-shrink: 7;
+    flex-shrink: 0;
 }
 
 .ftr_title {
@@ -390,7 +383,7 @@ input[type="email"] {
     height: 1px;
     background-color: var(--grey);
     width: 100%;
-    margin-top: 10px;
+    margin-top: 25px;
 }
 
 .footer-discleimer {
@@ -429,10 +422,6 @@ input[type="email"] {
         font-size: 48px;
     }
 
-    /*.left-section {*/
-        /*margin-left: 100px;*/
-    /*}*/
-
     .title_main {
         padding-left: 70px;
         font-size: 30px;
@@ -453,6 +442,3 @@ input[type="email"] {
         display: none;
     }
 }
-
-
-/*font-family: Gilroy;*/
