--- a/src/reset.css
+++ b/src/reset.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: "GilroyBold";
-	src: url("fonts/Gilroy-Bold.woff") format("woff");
+	src: url("../fonts/Gilroy-Bold.woff") format("woff");
 }
 
 @import url('https://fonts.googleapis.com/css?family=Roboto');
