--- a/src/main.css
+++ b/src/main.css
@@ -15,6 +15,8 @@
   --grey3: #a8b3c2;
   --grey4: #6e7680;
   --pink: #902156;
+  --red: rgba(218, 67, 83, 0.1);
+  --redBorder: rgba(218, 67, 83, 0.4);
   --gilroy: gilroybold, serif;
   --roboto: roboto, sans-serif;
 }
@@ -86,6 +88,13 @@
   outline: none;
   transition: 0.3s;
   background-color: white;
+}
+
+.input:focus:invalid {
+  background: var(--red);
+  border: 2px solid var(--redBorder);
+  outline: none;
+  transition: 0.3s;
 }
 
 .input .circleIcon:focus {
